# rust_template

./: Cargo.toml  Dockerfile  README.md  TEMPLATE_USAGE.md  cargo-generate.toml  clippy.toml  justfile  post_gen.sh  publish_template.sh  rustfmt.toml  test_main.rs
src/: main.rs
