[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
authors = ["Hamze ghalebi@gmail.com"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
rig-core = { version = "0.12.0" }
schemars = "0.9.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
[dev-dependencies]
pretty_assertions = "1.4"
